--- a/scss/main/_header.scss
+++ b/scss/main/_header.scss
@@ -15,7 +15,7 @@
   align-items: center;
   padding-top: 5px;
   h1 > a{
-    background: url('../../imgs/icon/logo-white.png') no-repeat center center;
+    background: url('../imgs/icon/logo-white.png') no-repeat center center;
     width: 180px;
     height: 55px;
     text-indent: 101%;
@@ -70,7 +70,7 @@
     .arrow{
       display: inline-block;
       position: absolute;
-      background: url('../../imgs/icon/icon-triangle-white.svg') no-repeat center center;
+      background: url('../imgs/icon/icon-triangle-white.svg') no-repeat center center;
       width: 8px;
       height: 6px;
       top: 50%;
