--- a/scss/main/_main.scss
+++ b/scss/main/_main.scss
@@ -57,7 +57,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../../imgs/icon/icon-arrow-main.svg');
+    background-image: url('../imgs/icon/icon-arrow-main.svg');
     background-repeat: no-repeat;
     background-size: contain;
   }
@@ -65,14 +65,14 @@
 .brown-arrow {
   background-color: $color-themeGray;
   &::before{
-    background-image: url('../../imgs/icon/icon-arrow-222.svg');
+    background-image: url('../imgs/icon/icon-arrow-222.svg');
   }
 }
 .float-mark{
   position: fixed;
   width: 25.12vh;
   height: 25.12vh;
-  background-image: url('../../imgs/icon/float-symbol.svg');
+  background-image: url('../imgs/icon/float-symbol.svg');
   background-size: contain;
   background-repeat: no-repeat;
   z-index: 100;
